--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="ser"> 
-                  <button class="btn btn-outline-success" type="submit" onclick="foo()">Search</button>
+                  <button class="btn btn-outline-success" type="submit" onclick="foo(event)">Search</button>
                 </form>
               </div>
             </div>
